k8s/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        args:
          - --provider=google
          - --http-address=0.0.0.0:4180
          - --upstream=http://nginx-service.example.svc.cluster.local:80/
          - --email-domain=*
          - --client-id=$(OAUTH2_CLIENT_ID)
          - --client-secret=$(OAUTH2_CLIENT_SECRET)
          - --cookie-secret=HaVPB9X+qR0nBCXDiyTdXg9luy0aqr8S
          - --redirect-url=http://localhost:4180/oauth2/callback
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: example
spec:
  ports:
    - port: 80
      targetPort: 4180
  selector:
    app: oauth2-proxy
